Fix overflow with blockquote

--- a/src/assets/css/project.css
+++ b/src/assets/css/project.css
@@ -41,6 +41,7 @@
   white-space: pre;
   margin: 0;
   padding: 12px 18px;
+  overflow-x: scroll;
 }
 
 .project blockquote p {
